# Singularity

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  config.example.toml  pyproject.toml
.engram/: manifest.json
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
singularity/: __init__.py  exceptions.py  executor.py  introspector.py  model_generator.py  types.py
singularity/cli/: __init__.py  _app.py  config.py  docs_generate.py  generate.py
singularity/version/: __init__.py  _azure.py  _base.py  _legacy.py  _modern.py
tests/: conftest.py  test_cli_generate.py  test_config_loading.py  test_field_sanitization.py  test_introspector.py  test_model_generation.py  test_type_mapping.py  test_version_detection.py  test_version_strategies.py
