[project]
name = "singularity"
version = "0.1.0"
description = "SQL Server stored procedure introspection and Pydantic model generator"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Samuel Urrego" },
]

dependencies = [
    "pyodbc>=5.0",
    "pydantic>=2.0",
    "typer>=0.9",
    "tomli>=2.0",
]

[project.scripts]
singularity = "singularity.cli._app:_main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-mock>=3.14",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: marks tests that require a real SQL Server database (deselect with '-m \"not integration\"')",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = true
ignore_missing_imports = true

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
