[project]
name = "singularity"
version = "0.1.0"
description = "SQL Server stored procedure introspection and Pydantic model generator"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Samuel Urrego" },
]

dependencies = [
    "pyodbc>=5.3.0",
    "pydantic>=2.13.4",
    "typer>=0.26.0",
    "tomli>=2.4.1",
    "rich>=15.0.0",
]

[project.scripts]
singularity = "singularity.cli._app:_main"

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.14",
    "mypy>=2.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: marks tests that require a real SQL Server database (deselect with '-m \"not integration\"')",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = true
ignore_missing_imports = true

[build-system]
requires = ["setuptools>=82.0.1"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
exclude = ["assets", "assets.*", "tests", "tests.*", "generated_models", "docs"]
